--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>I am git</h1>
     <p>THis is the description for git</p>
+    <script src="./script.js"></script>
 </body>
 </html>
