--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>I am git</h1>
     <p>THis is the description for git</p>
     <script src="./script.js"></script>
+    <h3>hello! </h3>
+    Hello I am karan!
+    <div>
+        hello dude this is change
+    </div>
 </body>
+
 </html>
