--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I am git</h1>
-    <p>THis is the description for git</p>
+
+    
+    <input id="num1" type="number" placeholder="Enter Number 1">
+    <input id="num2" type="number" placeholder="Enter Number 2">
+    <button id="btn">Add</button>
+
+    <h1>The ans is = <span id="ans"></span></h1>
     <script src="./script.js"></script>
 </body>
 </html>
