added new number

--- a/practice/pra.html
+++ b/practice/pra.html
@@ -69,6 +69,7 @@
             console.log(main);
             let nav=document.getElementById('nav');
             console.log(nav);
+            let a=5;
     </script>
 </body>
 </html>
